Fix repeated call to String::utf8() in SQLiteFileSystem::computeHashForFileName() https://bugs.webkit.org/show_bug.cgi?id=226693

Reviewed by Darin Adler.

* platform/sql/SQLiteFileSystem.cpp:
(WebCore::SQLiteFileSystem::computeHashForFileName):


Canonical link: https://commits.webkit.org/238531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278533 268f45cc-cd09-0410-ab3c-d52691b4dbfc